<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/btn_move_activity"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        android:text="@string/move_activity_withoutData" />

    <Button
        android:id="@+id/btn_move_data_activity"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        android:text="@string/move_activity_withData" />

    <Button
        android:id="@+id/btn_move_object_activity"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        android:text="@string/move_activity_object" />

    <Button
        android:id="@+id/btn_dial_number"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        android:text="@string/dial_number"/>

    <Button
        android:id="@+id/btn_move_result"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        android:text="@string/move_activity_result" />

    <TextView
        android:id="@+id/activity_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasil"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"/>


</LinearLayout>