<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/_200"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_200"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/_400"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_400"/>
        <RadioButton
            android:id="@+id/_150"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_150"/>
        <RadioButton
            android:id="@+id/_900"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_900"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"/>

</LinearLayout>